# aninfo_v2

./: Cargo.toml  aninfo_logov1.psd  index.html  mobile.css  styles.css  update_docs.ps1
docs/: aninfo_v2-22bc3c77401d2a79.js  aninfo_v2-6edbe6997582a52a.js  aninfo_v2-70e868305ce7b1c4.js  aninfo_v2-70e868305ce7b1c4_bg.wasm  aninfo_v2-b991df718c935cd.js  aninfo_v2-b991df718c935cd_bg.wasm  index.html  mobile-25ac9835b2c31e3e.css  mobile-34731ea094bef09b.css  styles-87ed7df94a6482a8.css  styles-f4115165eceb977c.css
src/: lib.rs  main.rs  routers.rs
src/aside/: index.html  styles.css
src/components/: about.rs  anime_card.rs  anime_details.rs  anime_result_std.rs  appctx_handler.rs  backup.rs  character_card.rs  comment_section.rs  context_debugger.rs  episode_cards.rs  error.rs  experiment.rs  explore.rs  footer.rs  header.rs  header_nb_wrapper.rs  home.rs  left_navbar.rs  loading.rs  login_wrapper.rs  mod.rs  page_button.rs  privacy_policy.rs  search_result.rs  test.rs  torrent_popup.rs  torrents.rs
src/stores/: genre_list.rs  mod.rs  stores.rs
src/utils/: app_macros.rs  data_handling.rs  general.rs  interface.rs  into_html.rs  mod.rs
