[package]
name = "aninfo_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35", features = ["wasm-bindgen"] }
cookie = "0.18.1"
gloo = { version = "0.11.0", features = ["utils"] }
reqwasm = "0.5.0"
scraper = "0.19.0"
serde = "1.0.197"
serde-aux = "4.5.0"
serde_json = "1.0.114"
sha256 = { version = "1.5.0", default-features = false }
time = { version = "0.3.36", features = ["wasm-bindgen"] }
tokio = { version = "1.36.0", features = ["rt", "macros"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["Performance", "HtmlDialogElement", "HtmlInputElement", "HtmlElement", "KeyboardEvent", "Document", "Element", "Window", "History", "HtmlCollection", "DomRect", "DomRectReadOnly", "Screen", "HtmlDocument", "HtmlTextAreaElement", "HtmlButtonElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.1"
yew-router = "0.18.0"
yewdux = "0.10.0"
